--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "singleQuote": true,
     "semi": true,
     "bracketSpacing": true,
-    "arrowParens": "always"
+    "arrowParens": "always",
+    "tabWidth": 4
 }
