--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "format": "prettier --write src/",
+    "pm2_dev": "pm2 start src/index.js --name Cookie -watch --watch-ignore=\"node_modules\"",
+    "pm2_start": "pm2 start src/index.js --name Cookie",
+    "lint": "eslint"
   },
   "dependencies": {
+    "ascii-table": "^0.0.9",
     "chalk": "^4.1.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "mongoose": "^5.12.0",
+    "ms": "^2.1.3",
     "pretty-ms": "^7.0.1"
   },
   "devDependencies": {
@@ -25,6 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
+    "pm2": "^4.5.5",
     "prettier": "^2.2.1"
   }
 }
