--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chalk": "^4.1.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.0",
     "ms": "^2.1.3",
     "pretty-ms": "^7.0.1"
